@startuml

title __ENTITIES's Class Diagram__\n

  namespace br.com.ufrn.imd.lpii.classes.entities {
    class br.com.ufrn.imd.lpii.classes.entities.Bem {
        - codigo : Integer
        - descricao : String
        - nome : String
        - tombo : String
        + Bem()
        + Bem()
        + compareTo()
        + equals()
        + getCategoria()
        + getCodigo()
        + getDescricao()
        + getLocalizacao()
        + getNome()
        + getTombo()
        + setCategoria()
        + setCodigo()
        + setDescricao()
        + setLocalizacao()
        + setNome()
        + setTombo()
        + toString()
    }
  }
  

  namespace br.com.ufrn.imd.lpii.classes.entities {
    class br.com.ufrn.imd.lpii.classes.entities.Categoria {
        - codigo : Integer
        - descricao : String
        - nome : String
        + Categoria()
        + Categoria()
        + compareTo()
        + equals()
        + getCodigo()
        + getDescricao()
        + getNome()
        + setCodigo()
        + setDescricao()
        + setNome()
        + toString()
    }
  }
  

  namespace br.com.ufrn.imd.lpii.classes.entities {
    class br.com.ufrn.imd.lpii.classes.entities.Localizacao {
        - codigo : Integer
        - descricao : String
        - nome : String
        + Localizacao()
        + Localizacao()
        {static} + cadastrarLocalizacao()
        + compareTo()
        + equals()
        + getCodigo()
        + getDescricao()
        + getNome()
        + setCodigo()
        + setDescricao()
        + setNome()
        + toString()
    }
  }
  

  br.com.ufrn.imd.lpii.classes.entities.Bem .up.|> java.lang.Comparable
  br.com.ufrn.imd.lpii.classes.entities.Bem o-- br.com.ufrn.imd.lpii.classes.entities.Categoria : categoria
  br.com.ufrn.imd.lpii.classes.entities.Bem o-- br.com.ufrn.imd.lpii.classes.entities.Localizacao : localizacao
  br.com.ufrn.imd.lpii.classes.entities.Categoria .up.|> java.lang.Comparable
  br.com.ufrn.imd.lpii.classes.entities.Localizacao .up.|> java.lang.Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
